@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-26T08:12:38Z",
-  "count_outdated" : 5072,
-  "uniques_outdated" : 1573,
+  "timestamp" : "2023-09-26T16:12:21Z",
+  "count_outdated" : 5073,
+  "uniques_outdated" : 1574,
   "count" : 5294,
   "uniques" : 1679,
   "clones" : [
-    {
-      "timestamp": "2023-09-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-13T00:00:00Z",
       "count": 3,
