@@ -1,12 +1,7 @@
 {
-  "count": 222,
+  "count": 221,
   "uniques": 74,
   "clones": [
-    {
-      "timestamp": "2023-09-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-13T00:00:00Z",
       "count": 3,
