@@ -1,3 +1,12 @@
+2023-09-26T16:12:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6315420441 # 1930
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
+* notice: last 14d: unq all: 74 221
+* notice: prev accum: outdated-unq outdated-all / unq all: 1573 5072 / 1679 5294
+* notice: next accum: outdated-unq outdated-all / unq all: 1574 5073 / 1679 5294
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-12] / []
+
 2023-09-26T08:12:38Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6309898564 # 1929
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
